Add resources; gif cycle from index

--- a/build.xml
+++ b/build.xml
@@ -40,6 +40,9 @@
 	<copy todir="${build.dir}/jar/images">
         <fileset dir="images" includes="**/*.png **/*.ttf **/*.gif"/>
 	</copy>
+	<copy todir="${build.dir}/jar/resources">
+        <fileset dir="resources" includes="**/*.txt"/>
+	</copy>
         <jar destfile="${build.dir}/${jar.name}" basedir="${build.dir}/jar">
             <manifest>
                 <attribute name="Main-Class" value="edu.mit.d54.PluginRunner"/>
